Upgrade supermarket billing interface and invoice flow